# x-agentic-workflow

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml
apps/macos/Cat Agentic.app/Contents/: Info.plist
apps/macos/Cat Agentic.app/Contents/MacOS/: cat-agentic
apps/macos/X Agentic Workflow.app/Contents/: Info.plist
apps/macos/X Agentic Workflow.app/Contents/MacOS/: x-agentic-workflow
artifacts/quality-runs/2026-07-03T11-35-00-provider-settings/: report.md
artifacts/quality-runs/2026-07-03T11-45-00-project-validation/: report.md
artifacts/quality-runs/2026-07-03T12-06-00-project-switching/: report.md
artifacts/quality-runs/2026-07-03T12-20-00-project-sessions/: report.md
artifacts/quality-runs/2026-07-03T12-40-00-file-ledger/: report.md
artifacts/quality-runs/2026-07-03T16-37-39-persisted-file-ledger/: report.md
artifacts/quality-runs/2026-07-03T17-52-09-ui-alignment/: report.md
artifacts/quality-runs/2026-07-03T18-13-48-session-recovery-search/: report.md
artifacts/quality-runs/2026-07-03T18-44-05-text-attachments/: report.md
artifacts/quality-runs/2026-07-03T18-56-20-provider-status/: report.md
artifacts/quality-runs/2026-07-03T19-21-14-composer-drafts/: report.md
docs/product/: cc-haha-parity-plan.md  clean-room-scope.md  competitor-release-lessons.md  legal-open-source-reference-map.md  macos-app.md  macos-distribution.md  release-checklist.md
packaging/macos/: cat-agentic-distribution-launcher.zsh  x-agentic-workflow-distribution-launcher.zsh
release-notes/: v0.10.0.md  v0.11.0.md  v0.11.1.md  v0.12.0.md  v0.13.0.md  v0.14.0.md  v0.15.0.md  v0.17.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
scripts/: build-macos-preview-dmg.sh  check-macos-signing.sh  smoke-macos-preview-dmg.sh
src/x_agentic_workflow/: __init__.py  agent.py  cli.py  config.py  desktop.py  hooks.py  mcp.py  multi_agent.py  providers.py  sessions.py  skills.py  tools.py  tui.py  types.py  ui.py
tests/: test_agent.py  test_desktop.py  test_distribution_docs.py  test_macos_app.py  test_tools.py  test_tui_and_smoke.py
