[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cat-agentic"
version = "0.17.0"
description = "A clean-room terminal agentic coding assistant with BYOK model providers, sandboxed tools, sessions, skills, hooks, MCP, and multi-agent extension points."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Nan Ge" }]
keywords = ["agent", "cli", "coding-assistant", "byok", "mcp", "skills"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Terminals",
]
dependencies = [
  "anthropic>=0.40.0",
  "openai>=1.0.0",
  "pydantic>=2.7.0",
  "rich>=13.7.0",
  "textual>=6.6.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[project.scripts]
cat-agentic = "x_agentic_workflow.cli:app"
xaw = "x_agentic_workflow.cli:app"
x-agentic-workflow = "x_agentic_workflow.cli:app"

[project.urls]
Homepage = "https://github.com/354685856-sn/x-agentic-workflow"
Repository = "https://github.com/354685856-sn/x-agentic-workflow"
Issues = "https://github.com/354685856-sn/x-agentic-workflow/issues"
Documentation = "https://github.com/354685856-sn/x-agentic-workflow#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/x_agentic_workflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = [
  "scripts",
  "docs",
  ".claude",
  ".codex",
  ".cursor",
  ".gemini",
  "patterns_library",
  "project_workflow",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["x_agentic_workflow"]
ignore_missing_imports = true
